# git-credential-github-app

./: .gitignore  Cargo.toml  git-askpass.sh.hbs
src/: auth.rs  doc.rs  env.rs  installation.rs  main.rs  writer.rs
src/creds/: auth.rs  cache.rs  mod.rs
