[package]
name = "token-tower"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bicycle = { git = "https://github.com/BrainiumLLC/bicycle" }
bossy = "0.2.1"
env_logger = "0.9.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
octocrab = { git = "https://github.com/BrainiumLLC/octocrab", branch = "pub-token" }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
